@@ -1,3 +1,8 @@
+2002-11-05  Emmanuel Beffara  <manu@beffara.org>
+
+	* src/graphics/eps_gz.py, ...: Added automating extraction of
+	bounding boxes from gzipped PostScript figures.
+
 2002-11-04  Emmanuel Beffara  <manu@beffara.org>
 
 	* src/modules/minitoc.py, src/modules/minitoc-hyper.py, man/:
